--- a/gpx.html
+++ b/gpx.html
@@ -40,7 +40,7 @@
 
           <ul class="nav navbar-nav">
             <li><a href="./index.html">Home</a></li>
-            <li><a href="./unrooted.html">Unrooted Guides</a></li>
+            <li><a href="#">Unrooted Guides</a></li>
             <li><a href="#">Contact</a></li>
 			<li class="active"><a href="./gpx.html">GPX Generator</a></li>			
           </ul>
