--- a/gpx.html
+++ b/gpx.html
@@ -107,6 +107,8 @@
 				A: No. FGL Pro doesn't have that function. Use <a href="http://gpsjoystick.theappninjas.com/faq/" target="_blank">GPS JoyStick</a> for that.<br />
 				<b>Q: Can this be used on iOS/Android?</b><br />
 				A: Yes. Select the appropiate option above and click Download.<br>
+				<b>Q: What is this for?</b><br />
+				A: You can use this for field quests or if you want to make custom routes.<br>					
 				<b>Q: Where can I find GPX Routes?</b><br>
 				A: You can find already made routes <a href="https://drive.google.com/open?id=1Qor3Hm-ECv0toOft4E1gU8gxqoPyMbP_" target="_blank">here</a> and <a href="https://drive.google.com/drive/folders/18UHdjwNPFJ50cln32DsVl-__jjU0-pxO" target="_blank">here</a><br>
 				<b>Q: How do I import routes?</b><br>
