--- a/safetynet.html
+++ b/safetynet.html
@@ -66,6 +66,7 @@
                 <img src="./images/pokeball.png" />
               </div>
               <div class="enhanced" align="center">
+		      **This guide is NOT for VMOS**
                 <h2>How to fix SafetyNET</h2>
 <b>Recently Google is making some changes to safetynet and as of now this should cover how to make it pass.</b>
 <br><br>
