--- a/gpx.html
+++ b/gpx.html
@@ -39,8 +39,8 @@
         <div id="navbar" class="navbar-collapse collapse">
 
           <ul class="nav navbar-nav">
-            <li class="active"><a href="./safetynet.html">Fixing SafetyNET</a></li>
-			<li><a href="./gpx.html">GPX Generator</a></li>			
+            <li><a href="./safetynet.html">Fixing SafetyNET</a></li>
+		<li class="active"><a href="./gpx.html">GPX Generator</a></li>			
           </ul>
 
         </div><!--/.navbar-collapse -->
