--- a/safetynet.html
+++ b/safetynet.html
@@ -66,8 +66,7 @@
                 <img src="./images/pokeball.png" />
               </div>
               <div class="enhanced" align="center">
-		      <br>
-		      <h3>**This guide is NOT for VMOS**</h3>
+		      <span class="blinking">This guide is NOT for VMOS</span>
                 <h2>How to fix SafetyNET</h2>
 <b>Recently Google is making some changes to safetynet and as of now this should cover how to make it pass.</b>
 <br><br>
