--- a/safetynet.html
+++ b/safetynet.html
@@ -78,7 +78,7 @@
                 <img src="./images/pokeball.png" />
               </div>
               <div class="enhanced" align="center">
-		      <span class="blinking">This guide is NOT for VMOS</span>
+		      <span class="blinking"><h3>This guide is NOT for VMOS</h3></span>
                 <h2>How to fix SafetyNET</h2>
 <b>Recently Google is making some changes to safetynet and as of now this should cover how to make it pass.</b>
 <br><br>
