--- a/gpx.html
+++ b/gpx.html
@@ -110,7 +110,7 @@
 				<b>Q: How do I import routes?</b><br>
 				A: Open GPS JoyStick click the 3 line menu (☰) on the top-left corner and click GPX Import/Export. Proceed to import any .gpx file that you may have.<br> Afterwards click the Waypoints tab then the green button on the bottom right corner and choose "Create route from all".<br>
 				<b>Q: How can I contact you?</b><br>
-				A: My Discord username is : SoaresPT#4000<br>
+				A: My Discord username is : SoaresPT#4000. Alternatively <a href="http://discordapp.com/users/186588690909233152">click here</a> to talk to me. Even if it's just to say Hi! :)<br>
              </div>
            </div>
           </div>
