--- a/safetynet.html
+++ b/safetynet.html
@@ -82,7 +82,7 @@
                 <h2>How to fix SafetyNET</h2>
 <b>Recently Google is making some changes to safetynet and as of now this should cover how to make it pass.</b>
 <br><br>
-<font size="3">Start by deleting any modules you have that help you pass safetynet. Namely the one called "<b>SafetyPatch</b>"<br><br>
+<font size="3">Start by deleting any modules you have that help you pass safetynet. Namely the one called "<b>SafetyPatch</b>" then reboot your phone.<br><br>
 <b>What you need:</b><br><br>
 <a href="https://play.google.com/store/apps/details?id=com.termux">Termux</a> or any other Terminal Emulator that you can download from the playstore.
 <br><br>
