--- a/safetynet.html
+++ b/safetynet.html
@@ -92,6 +92,7 @@
 <iframe width="560" height="315" src="https://www.youtube.com/embed/O_5EJCQH4R0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br><br>
 <b>Set the device fingerprint via Termux:</b>
+<br>You can pick any fingerprint. For example "OnePlus 7 Pro" or so. Do not pick the same fingerprint of your current device.<br>	
 <br><iframe width="560" height="315" src="https://www.youtube.com/embed/3ncROB71y4M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br><br>
 <b>Reboot your phone and check your safetynet</b><br><br>
