--- a/safetynet.html
+++ b/safetynet.html
@@ -87,7 +87,8 @@
 <a href="https://play.google.com/store/apps/details?id=com.termux">Termux</a> or any other Terminal Emulator that you can download from the playstore.
 <br><br>
 <b>Modules Installation</b>
-<br>You need to install 2 modules :  <b>Busybox for Android NDK</b> and <b>MagiskHide Props Config</b>.<br><br>
+<br>You need to install 2 modules :  <b>Busybox for Android NDK</b> and <b>MagiskHide Props Config</b><br>
+This requires magisk 19.4+ so update if you haven't yet then install them.<br><br>
 <b>Video for reference:<b><br>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/O_5EJCQH4R0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br><br>
