--- a/safetynet.html
+++ b/safetynet.html
@@ -83,6 +83,11 @@
 <b>Recently Google is making some changes to safetynet and as of now this should cover how to make it pass.</b>
 <br><br>
 <font size="3">Start by deleting any modules you have that help you pass safetynet. Namely the one called "<b>SafetyPatch</b>" then reboot your phone.<br><br>
+<b>Method 1:</b><br>
+Download and install this <a href="https://github.com/SoaresPT/PokemonGOSpoofing/blob/master/Pogo_2020_fixes_AsafS.zip">Magisk Module</a>. You can install magisk modules by opening the Manager -> Modules -> + -> select the Pogo_2020_fixes_AsafS.zip and reboot.
+<br><b>Credits to Vovik and asafMVP</b><br><i>The module is still in beta. If it doesn't work for you contact me on discord.</i>
+<br><br>
+<b>Method 2:</b><br>
 <b>What you need:</b><br><br>
 <a href="https://play.google.com/store/apps/details?id=com.termux">Termux</a> or any other Terminal Emulator that you can download from the playstore.
 <br><br>
