--- a/safetynet.html
+++ b/safetynet.html
@@ -84,7 +84,7 @@
 <br><br>
 <font size="3">Start by deleting any modules you have that help you pass safetynet. Namely the one called "<b>SafetyPatch</b>" then reboot your phone.<br><br>
 <h2>Method 1:</h2><br>
-Download and install this <a href="https://github.com/SoaresPT/PokemonGOSpoofing/blob/master/Pogo_2020_fixes_AsafS.zip">Magisk Module</a>. You can install magisk modules by opening the Manager -> Modules -> + -> select the Pogo_2020_fixes_AsafS.zip and reboot.
+Download and install this <a href="https://github.com/SoaresPT/PokemonGOSpoofing/raw/master/Pogo_2020_fixes_AsafS.zip" target="_blank">Magisk Module</a>. You can install magisk modules by opening the Manager -> Modules -> + -> select the Pogo_2020_fixes_AsafS.zip and reboot.
 <br><b>Credits to Vovik and asafMVP</b><br><i>The module is still in beta. If it doesn't work for you contact me on discord.</i>
 <br><br>
 <h2>Method 2:</h2><br>
