--- a/gpx.html
+++ b/gpx.html
@@ -88,7 +88,7 @@
 								//gpxtext += '<wpt lat="'+ lines[i].split(',')[0];
 								//gpxtext += ' lon="' + + lines[i].split(',')[1] + '">\n<name>WP' +i+'<name>\n</wpt>\n';
 								// origin gpxtext += '<wpt lat="'+ lines[i].split(',')[0] + ' lon="' + + lines[i].split(',')[1] + '">\n<name>WP' +i+'<name>\n</wpt>\n';
-								gpxtext += '<wpt lat="'+ lines[i].split(',')[0] + " lon="' + lines[i].split(',')[1] + '">\n<name>WP' +i+'<name>\n</wpt>\n';
+								gpxtext += '<wpt lat="'+ lines[i].split(',')[0] + ' lon="' + + lines[i].split(',')[1] + '">\n<name>WP' +i+'<name>\n</wpt>\n';
 							}
 						gpxtext +='</gpx>';	
 						var text = document.getElementById("text-val").value;
