--- a/gpx.html
+++ b/gpx.html
@@ -87,7 +87,7 @@
 						for(var i = 0;i < lines.length;i++){
 								//gpxtext += '<wpt lat="'+ lines[i].split(',')[0];
 								//gpxtext += ' lon="' + + lines[i].split(',')[1] + '">\n<name>WP' +i+'<name>\n</wpt>\n';
-								gpxtext += '<wpt lat="'+ lines[i].split(',')[0] + '" lon="' + lines[i].split(',')[1] + '">\n<name>WP' +i+'<name>\n</wpt>\n';
+								gpxtext += '<wpt lat="'+ lines[i].split(',')[0] + '" lon="' + lines[i].split(',')[1] + '">\n<name>WP' +i+'</name>\n</wpt>\n';
 							}
 						gpxtext +='</gpx>';	
 						var text = document.getElementById("text-val").value;
