--- a/32bit.html
+++ b/32bit.html
@@ -82,30 +82,11 @@
               <div class="enhanced" align="center">
                 <h2>How to check the CPU Architecture</h2>
 <b>Recently Google is making some changes to safetynet and as of now this should cover how to make it pass.</b>
-<br><br>
-<font size="3">Start by deleting any modules you have that help you pass safetynet. Namely the one called "<b>SafetyPatch</b>" then reboot your phone.<br><br>
-<h2>Method 1:</h2><br>
-Download and install this <a href="https://github.com/SoaresPT/PokemonGOSpoofing/raw/master/Pogo_2020_fixes_AsafS.zip" target="_blank">Magisk Module</a>. You can install magisk modules by opening the Manager -> Modules -> + -> select the Pogo_2020_fixes_AsafS.zip and reboot.
-<br><b>Credits to Vovik and asafMVP</b><br><i>The module is still in beta. If it doesn't work for you contact me on discord.</i>
-<br><br>
-<h2>Method 2:</h2><br>
-<b>Use this in case Method 1 fails </b>
-<b>What you need:</b><br><br>
-<a href="https://play.google.com/store/apps/details?id=com.termux">Termux</a> or any other Terminal Emulator that you can download from the playstore.
-<br><br>
-<b>Modules Installation</b>
-<br>You need to install 2 modules :  <b>Busybox for Android NDK</b> and <b>MagiskHide Props Config</b><br>
-This requires magisk 19.4+ so update if you haven't yet then install them.<br><br>
-<b>Video for reference:<b><br>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/O_5EJCQH4R0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<br><br>
-<b>Set the device fingerprint via Termux:</b>
-<br>You can pick any fingerprint. For example "OnePlus 7 Pro" or so. Do not pick the same fingerprint of your current device.<br>	
-<br><iframe width="560" height="315" src="https://www.youtube.com/embed/3ncROB71y4M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<br><br>
-<b>Reboot your phone and check your safetynet</b><br><br>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/eYdlbYaWoW8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</font>
+               <ul> <li>Download and Install the following app : http://file.antutu.com/soft/antutu-benchmark-v839-en.apk</li>
+<li>Open it and click My Device under Basic Info it will say Android followed by the version and architecture installed.</li>
+If it's says 64-bit you won't be affected and can stop reading this.
+                 If it says 32-bit swipe down until you see <b>CPU</b> and check the <b>Type</b> if it says 32-bit you won't be able to play pokemon go with that phone.
+If it says 64-bit you will have to install a 64-bit custom rom.</li></ul>
              </div>
            </div>
           </div>
