--- a/32bit.html
+++ b/32bit.html
@@ -80,11 +80,11 @@
                 <img src="./images/pokeball.png" />
               </div>
               <div class="enhanced" align="center">
-                <h2>How to check the CPU Architecture</h2>
-<b>Recently Google is making some changes to safetynet and as of now this should cover how to make it pass.</b>
-               <ul> <li>Download and Install the following app : http://file.antutu.com/soft/antutu-benchmark-v839-en.apk</li>
-<li>Open it and click My Device under Basic Info it will say Android followed by the version and architecture installed.</li>
-If it's says 64-bit you won't be affected and can stop reading this.
+	<h2>How to check the CPU Architecture</h2>
+	<b>Following the news: <a href="https://pokemongolive.com/en/post/32-bit-android-discontinued-support/">Pokémon GO to discontinue support on 32-bit Android devices</a> I've written a brief step-by-step tutorial on how to find out if your phone is going to be affected.</b>
+	<ul><li>Start by downloading and installing the following app : <a href="http://file.antutu.com/soft/antutu-benchmark-v839-en.apk" target="_blank">antutu-benchmark</a></li>
+		<li>Open it and click <b>My Device<b> under <b>Basic Info</b> it will say Android followed by the version and architecture installed.<br>
+		If it's says 64-bit you won't be affected and can stop reading this.<br><br>
                  If it says 32-bit swipe down until you see <b>CPU</b> and check the <b>Type</b> if it says 32-bit you won't be able to play pokemon go with that phone.
 If it says 64-bit you will have to install a 64-bit custom rom.</li></ul>
              </div>
