--- a/32bit.html
+++ b/32bit.html
@@ -81,7 +81,7 @@
               </div>
               <div class="enhanced" align="center">
 	<h2>How to check the CPU Architecture</h2>
-	<b>Following the news: <a href="https://pokemongolive.com/en/post/32-bit-android-discontinued-support/">Pokémon GO to discontinue support on 32-bit Android devices</a>.<br><br>I've written a brief step-by-step tutorial on how to find out if your phone is going to be affected.</b>
+	<b>Following the news: <a href="https://pokemongolive.com/en/post/32-bit-android-discontinued-support/" target="_blank">Pokémon GO to discontinue support on 32-bit Android devices</a>.<br><br>I've written a brief step-by-step tutorial on how to find out if your phone is going to be affected.</b>
 	<ul><li>Start by downloading and installing the following app : <a href="http://file.antutu.com/soft/antutu-benchmark-v839-en.apk" target="_blank">antutu-benchmark</a></li>
 		<li>Open it and click <b>My Device<b> under <b>Basic Info</b> it will say Android followed by the version and architecture installed.<br>
 		If it's says 64-bit you won't be affected and can stop reading this.<br><br>
